# marketsched

./: CLAUDE.md  README.md
.specify/memory/: constitution.md
docs/: architecture.md  conf.py  getting-started.md  index.md  make.bat
docs/api/: business-day.md  cache.md  contract-month.md  exceptions.md  index.md  market.md  session.md  sq.md
docs/cli/: bd.md  cache.md  index.md  sq.md  ss.md
python/: README.md  pyproject.toml
python/src/marketsched/: __init__.py  cache.py  contract_month.py  exceptions.py  market.py  registry.py  session.py
python/src/marketsched/cli/: __init__.py  bd.py  cache.py  main.py  sq.py  ss.py
python/src/marketsched/jpx/: __init__.py  calendar.py  index.py  session.py
python/src/marketsched/jpx/data/: __init__.py  cache.py  fetcher.py  query.py
python/tests/: conftest.py  test_package.py
python/tests/cli/: conftest.py  test_bd.py  test_cache.py  test_main.py  test_sq.py  test_ss.py
python/tests/integration/: __init__.py  conftest.py  test_cache.py  test_jpx_fetcher.py  test_jpx_index.py  test_registry_integration.py
python/tests/unit/: test_cache_models.py  test_contract_month.py  test_exceptions.py  test_jpx_data_query.py  test_jpx_fetcher_parsers.py  test_jpx_index_unit.py  test_parquet_cache.py  test_registry.py  test_session.py
specs/001-marketsched-core/: spec.md
specs/001-marketsched-core/checklists/: requirements.md
specs/002-marketsched-python/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-marketsched-python/checklists/: requirements.md
specs/002-marketsched-python/contracts/: cli-api.md  python-api.md
