[project]
name = "marketsched"
version = "0.0.1"
description = "Market calendar, SQ dates, and trading hours management for Japanese financial markets"
readme = "README.md"
authors = [
    { name = "driller", email = "eleshis@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0.0",
    "typer>=0.9.0",
    "httpx>=0.27.0",
    "pyarrow>=15.0.0",
    "openpyxl>=3.1.0",
]

[project.scripts]
marketsched = "marketsched.cli:main"
mks = "marketsched.cli:main"

[build-system]
requires = ["uv_build>=0.9.29,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "mypy>=1.8.0",
    "ruff>=0.2.0",
]
docs = [
    "myst-parser>=2.0.0",
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=2.0.0",
    "sphinxcontrib-mermaid>=0.9.0",
]
